Enable lineage relationship between custom data classes in apps (#4255)